--- a/app/src/main/res/layout/activity_regiter_phone.xml
+++ b/app/src/main/res/layout/activity_regiter_phone.xml
@@ -10,6 +10,7 @@
     <ImageView
         android:id="@+id/Img_regerterphone_homback"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="12dp"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/back"
@@ -121,9 +122,9 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_regiterphone_continue"
         android:layout_marginTop="38dp"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginHorizontal="78dp"
+        android:layout_gravity="center"
         android:text="Tiếp tục  "
         android:textSize="24dp"
         android:fontFamily="@font/robotomedium"
