--- a/app/src/main/res/layout/activity_xac_thuc_sdt_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_xac_thuc_sdt_quen_mat_khau.xml
@@ -7,18 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".activity.XacThucSdtQuenMatKhauActivity">
     <LinearLayout
-        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
+
         <ImageView
             android:id="@+id/img_fogot_back"
             android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/back"
-            android:layout_gravity="center_vertical"
-            />
+            android:layout_height="27dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginStart="12dp"
+
+            android:src="@drawable/back" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
