--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,7 +69,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginHorizontal="27dp"
         android:layout_width="match_parent"
-        app:startIconDrawable="@drawable/ic_phone"
+        app:startIconDrawable="@drawable/ic_vt_phone1"
         android:layout_height="wrap_content"
         android:hint="Số điện thoại "
         android:backgroundTint="#666C1C"
@@ -105,7 +105,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginHorizontal="27dp"
         android:layout_width="match_parent"
-        app:startIconDrawable="@drawable/ic_password"
+        app:startIconDrawable="@drawable/ic_vt_key"
         android:layout_height="wrap_content"
         android:hint="Mật khẩu "
         android:backgroundTint="#666C1C"
@@ -142,7 +142,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginHorizontal="27dp"
         android:layout_width="match_parent"
-        app:startIconDrawable="@drawable/ic_password"
+        app:startIconDrawable="@drawable/ic_vt_key"
         android:layout_height="wrap_content"
 
         android:hint="Mật khẩu "
