--- a/app/src/main/res/layout/activity_regiter_phone.xml
+++ b/app/src/main/res/layout/activity_regiter_phone.xml
@@ -5,21 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F5F6F8"
+    android:background="#FFFFFF"
     tools:context=".activity.RegiterPhoneActivity">
     <ImageView
         android:id="@+id/Img_regerterphone_homback"
         android:layout_marginTop="20dp"
         android:layout_marginStart="12dp"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/back"
-        android:layout_gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_vt_back"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Chào bạn "
+        android:layout_marginTop="16dp"
         android:textColor="@color/black"
         android:gravity="center_horizontal"
         android:textSize="28dp"
@@ -69,24 +69,27 @@
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/phone_android"
+                android:src="@drawable/ic_vt_phone"
                 />
+
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/robotomedium"
+                android:textStyle="bold"
                 android:text="84+"
-                android:textSize="20dp"
-                android:fontFamily="@font/robotoregular"
+                android:gravity="center_vertical"
                 android:textColor="#000000"
-                />
+                android:textSize="20sp" />
             <EditText
                 android:inputType="number"
                 android:id="@+id/edt_regiterphone_sdt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:textSize="20sp"
                 android:hint="nhập số điện thoại "
                 android:background="#FFFFFF"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -113,7 +116,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Điều KHoản &amp; dịch vụ  "
+            android:text="Điều Khoản &amp; Dịch vụ  "
             android:textColor="#F60303"
             android:textSize="18dp"
             android:fontFamily="@font/roboto"
@@ -122,11 +125,12 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_regiterphone_continue"
         android:layout_marginTop="38dp"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:layout_gravity="center"
-        android:text="Tiếp tục  "
-        android:textSize="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="27dp"
+        android:text="Tiếp tục"
+        android:textAllCaps="false"
+        android:textSize="18sp"
         android:fontFamily="@font/robotomedium"
         android:textColor="#ffff"
         android:background="@drawable/my_corner_button"
