--- a/app/src/main/res/layout/activity_repass.xml
+++ b/app/src/main/res/layout/activity_repass.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F6F8"
+    android:background="#FFFFFF"
     tools:context=".activity.RepassActivity">
     <ScrollView
         android:layout_width="match_parent"
@@ -28,102 +28,89 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_hair_salon"
-                android:layout_marginTop="11dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hair Salon"
-                android:textColor="#8D12B8"
-                android:textSize="20dp"
-                android:layout_marginHorizontal="147dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:fontFamily="@font/robotoregular"
-                app:layout_constraintTop_toBottomOf="@id/img_logo" />
+<!--            <TextView-->
+<!--                android:id="@+id/tv_hair_salon"-->
+<!--                android:layout_marginTop="11dp"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Hair Salon"-->
+<!--                android:textColor="#8D12B8"-->
+<!--                android:textSize="20dp"-->
+<!--                android:layout_marginHorizontal="147dp"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                android:fontFamily="@font/robotoregular"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/img_logo" />-->
 
             <TextView
                 android:id="@+id/tv_sign_in"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:fontFamily="@font/robotoregular"
+                android:fontFamily="@font/roboto_medium"
                 android:text="Đổi mật khẩu  "
-                android:textColor="#666C1C"
-                android:textSize="45dp"
+                android:textColor="@color/black"
+                android:textSize="40sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_hair_salon" />
-            <androidx.cardview.widget.CardView
-                android:layout_marginTop="30dp"
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="57dp"
-                android:layout_marginHorizontal="20dp"
-                app:cardCornerRadius="10dp"
-                >
-                <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_height="58dp"
+                android:layout_marginHorizontal="27dp"
+                android:layout_marginTop="25dp"
+                android:textColorHint="#8A8A8A"
+                app:boxBackgroundColor="#F5F6F8"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:shapeAppearance="@style/Rounded"
+                app:startIconDrawable="@drawable/ic_vt_key">
+
+                <EditText
+                    android:inputType="textPassword"
+                    android:id="@+id/edt_repass_pass"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/roboto_regular"
                     android:layout_width="match_parent"
-                    android:layout_height="57dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    >
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/key"
-                        />
-                    <EditText
-                        android:inputType="textPassword"
-                        android:id="@+id/edt_repass_pass"
-                        android:layout_marginLeft="25dp"
-                        android:textSize="16dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Mật kHẩu"
-                        android:background="#FFFFFF"
-                        />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_marginTop="29dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Mật khẩu"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="57dp"
-                android:layout_marginHorizontal="20dp"
-                app:cardCornerRadius="10dp"
-                >
-                <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_height="58dp"
+                android:layout_marginHorizontal="27dp"
+                android:layout_marginTop="25dp"
+                android:textColorHint="#8A8A8A"
+                app:boxBackgroundColor="#F5F6F8"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:shapeAppearance="@style/Rounded"
+                app:startIconDrawable="@drawable/ic_vt_key">
+
+                <EditText
+                    android:inputType="textPassword"
+                    android:id="@+id/edt_repass_repass"
                     android:layout_width="match_parent"
-                    android:layout_height="57dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    >
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/key"
-                        />
-                    <EditText
-                        android:inputType="textPassword"
-                        android:id="@+id/edt_repass_repass"
-                        android:layout_marginLeft="25dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Xác nhận  mật kHẩu"
-                        android:background="#FFFFFF"
-                        />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-            </androidx.cardview.widget.CardView>
+                    android:fontFamily="@font/roboto_regular"
+                    android:layout_height="wrap_content"
+                    android:hint="Xác nhận  mật khẩu"
+                    android:textSize="18sp"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_repass"
-                android:layout_marginTop="80dp"
-                android:layout_width="215dp"
-                android:layout_height="55dp"
-                android:layout_marginHorizontal="78dp"
+                android:layout_marginTop="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="27dp"
                 android:text="Thay đổi "
-                android:textSize="24dp"
+                android:textAllCaps="false"
+                android:textSize="18sp"
                 android:fontFamily="@font/robotomedium"
                 android:textColor="#ffff"
                 android:background="@drawable/my_corner_button"
