--- a/app/src/main/res/layout/activity_accout.xml
+++ b/app/src/main/res/layout/activity_accout.xml
@@ -52,7 +52,8 @@
                     android:background="#505050"
                     android:gravity="center_horizontal">
 
-                    <com.google.android.material.imageview.ShapeableImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/img_account_avat"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginTop="30dp"
