--- a/app/src/main/res/layout/activity_update_account.xml
+++ b/app/src/main/res/layout/activity_update_account.xml
@@ -39,12 +39,13 @@
                 android:background="#505050"
                 android:orientation="vertical">
 
-                <com.google.android.material.imageview.ShapeableImageView
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/img_update_avt"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
-                    android:src="@mipmap/ic_launcher_round"
+                    android:src="@drawable/account"
                     app:shapeAppearanceOverlay="@style/cilcle" />
             </LinearLayout>
 
