--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -39,7 +39,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/home_tv_name_user"
+                android:id="@+id/user_tv_name_user"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_gravity="center_vertical"
