--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,14 @@
             android:background="@drawable/tranparentbackground"
             app:menu="@menu/nav_bottom"/>
     </com.google.android.material.bottomappbar.BottomAppBar>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/dat_lich"
         android:backgroundTint="#FFFFFF"
 
-        app:layout_anchor="@id/bottomappbar"/>
+        android:src="@drawable/dat_lich"
+        app:layout_anchor="@id/bottomappbar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
