--- a/app/src/main/res/layout/activity_update_account.xml
+++ b/app/src/main/res/layout/activity_update_account.xml
@@ -5,58 +5,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F5F6F8"
     tools:context=".activity.UpdateAccountActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ic_vt_back_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingEnd="30dp"
-            android:layout_marginTop="8dp"
-            android:text="Chỉnh sửa thông tin"
+            android:text="Chỉnh sửa thông Tin"
             android:textColor="#000000"
-            android:textSize="22sp"
-            android:fontFamily="@font/roboto_medium" />
+            android:textSize="24dp"
+            android:textStyle="bold" />
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="112dp"
-                android:background="@drawable/custom_gradient"
-                android:gravity="center_horizontal"/>
-            <com.google.android.material.imageview.ShapeableImageView
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="-95dp"
-                android:background="@color/white"
-                android:src="@drawable/ic_logo"
-                app:shapeAppearanceOverlay="@style/cilcle" />
+                android:layout_height="210dp"
+                android:layout_marginTop="22dp"
+                android:background="#505050"
+                android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/img_update_avt"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:src="@drawable/account"
+                    app:shapeAppearanceOverlay="@style/cilcle" />
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
-                android:background="@color/white"
+                android:background="@drawable/custom_account"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -67,69 +63,70 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:text="Họ và tên"
-                        android:layout_marginStart="24dp"
-                        android:fontFamily="@font/roboto_medium"
-                        android:textSize="18dp" />
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="36dp"
+                        android:backgroundTint="#000000"
+                        android:text="Họ và tên "
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/edt_update_account_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginHorizontal="25dp"
+                        android:layout_marginTop="5dp"
                         android:hint="Nhập họ tên " />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginTop="26dp"
-                        android:textColor="@color/black"
-                        android:fontFamily="@font/roboto_medium"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="36dp"
+                        android:backgroundTint="#000000"
                         android:text="Ngày sinh "
-                        android:textSize="18dp" />
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/edt_update_account_birthday"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginTop="6dp"
-                        android:hint="Nhập ngày sinh" />
+                        android:layout_marginHorizontal="25dp"
+                        android:layout_marginTop="5dp"
+                        android:hint="Nhập ngày sinh .... " />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginTop="26dp"
-                        android:textColor="@color/black"
-                        android:text="Địa chỉ"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="36dp"
+                        android:backgroundTint="#000000"
+                        android:text="Địa chỉ  "
                         android:textSize="18dp"
-                        android:fontFamily="@font/roboto_medium"/>
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/edt_update_account_Adress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginHorizontal="25dp"
                         android:layout_marginTop="5dp"
                         android:hint="Nhập địa chỉ  " />
+
+                    <TextView
+                        android:id="@+id/tvLuuthongtin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="100dp"
+                        android:gravity="center_horizontal"
+                        android:fontFamily="@font/roboto"
+                        android:text="@string/txtluuthongtin"
+                        android:textColor="#505050"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/tvLuuthongtin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="27dp"
-                android:layout_marginTop="40dp"
-                android:background="@drawable/my_corner_button"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Cập nhật"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="18sp" />
         </LinearLayout>
 
     </ScrollView>
