--- a/app/src/main/res/drawable/custom_corner_input.xml
+++ b/app/src/main/res/drawable/custom_corner_input.xml
@@ -5,8 +5,8 @@
     <item>
         <shape android:shape="rectangle">
 
-            <solid android:color="#d8d8d8" />
-            <corners android:radius="7dp" />
+            <solid android:color="#F5F6F8" />
+            <corners android:radius="5dp" />
 
         </shape>
     </item>
@@ -15,8 +15,8 @@
 
         <shape android:shape="rectangle">
 
-            <solid android:color="#FFFFFF" />
-            <corners android:radius="7dp" />
+            <solid android:color="#F5F6F8" />
+            <corners android:radius="5dp" />
 
 
         </shape>
