--- a/app/src/main/res/layout/fragment_lichsucut.xml
+++ b/app/src/main/res/layout/fragment_lichsucut.xml
@@ -2,21 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:backgroundTint="#F6F6F6"
+    android:background="#F5F6F8"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginBottom="12dp"
         >
         <ImageView
-            android:layout_margin="10dp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/home1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_vt_home_32"
             android:id="@+id/btnhomeLichSuCut"
+            android:layout_marginStart="12dp"
             />
 
         <TextView
@@ -25,11 +26,55 @@
             android:gravity="center"
             android:text="Lịch Sử Cắt"
             android:textColor="@color/black"
-            android:layout_marginTop="1dp"
-            android:textSize="32dp" />
+            android:fontFamily="@font/roboto_medium"
+            android:paddingEnd="40dp"
+            android:textSize="24sp" />
     </LinearLayout>
-    <ListView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/titlehistory"
+                android:textSize="16sp"
+                android:fontFamily="@font/roboto_medium"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:layout_marginTop="12dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/contenthistory"
+                android:textSize="14sp"
+                android:layout_marginHorizontal="20dp"
+                android:fontFamily="@font/roboto_light"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:layout_marginTop="12dp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="95dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="23dp"
+                android:background="@drawable/my_corner_button"
+                android:fontFamily="@font/roboto_medium"
+                android:text="@string/textbtnthistory"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="5dp"
         android:id="@+id/lv_lichsucut"/>
 </LinearLayout>
