--- a/app/src/main/res/layout/item_lichsucut.xml
+++ b/app/src/main/res/layout/item_lichsucut.xml
@@ -1,135 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/cardview_lichsu_lichsucut"
+    android:id="@+id/cardview_lichsu_lichsucut"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="15dp"
+    android:layout_marginHorizontal="12dp">
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="30dp"
-    android:layout_margin="20dp"
-    >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
-
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="10dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-<!--            <ImageView-->
-<!--                android:id="@+id/img_lichsu_avatar"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:layout_width="149dp"-->
-<!--                android:layout_height="149dp"-->
-<!--                android:src="@drawable/thuy"/>-->
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
             <LinearLayout
-                android:layout_margin="10dp"
-                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="#FFFFFF"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:textSize="18dp"
-                        android:fontFamily="@font/roboto"
-                        android:textStyle="bold"
-                        android:layout_marginTop="10dp"
-                        android:id="@+id/tv_lichsu_diachi"
-                        android:layout_width="match_parent"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Bùi Phương Nam "
-                        android:textColor="@color/black"
-
+                        android:layout_marginTop="20dp"
+                        android:layout_marginStart="12dp"
+                        android:src="@drawable/img_send"
                         />
-                    <TextView
-                        android:id="@+id/tv_lichsu_thoigian"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="09/10/2022 15:54"
-                       />
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_lichsu_diachi"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginTop="20dp"
+                            android:fontFamily="@font/roboto"
+                            android:text="Bùi Phương Nam"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/tv_lichsu_thoigian"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginTop="7dp"
+                            android:fontFamily="@font/roboto_light"
+                            android:text="09/10/2022 15:54"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
                 </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginHorizontal="12dp"
+                    android:background="#F3EEEE" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:textSize="16dp"
-                        android:fontFamily="@font/robotolight"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Stylist"/>
-                    <TextView
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="17dp"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
 
-                        android:layout_width="wrap_content"
+                    <TextView
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="2.5"
+                        android:fontFamily="@font/robotolight"
+                        android:text="Stylist:"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/tv_lichsu_namestylist"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="7.5"
                         android:text="LÊ TÙNG VÂN"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/black"
-                        android:id="@+id/tv_lichsu_namestylist"/>
+                        android:textColor="@color/black" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="9dp"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:textSize="16dp"
+                        android:layout_weight="2.5"
                         android:fontFamily="@font/robotolight"
-                        android:text="Skinner"/>
+                        android:text="Skinner:"
+                        android:textSize="16dp" />
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_lichsu_nameskinner"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="7.5"
                         android:text="NGUYỄN THỊ NGA"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/black"
-                        android:id="@+id/tv_lichsu_nameskinner"/>
+                        android:textColor="@color/black" />
                 </LinearLayout>
-                <LinearLayout
 
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="40dp"
+                    android:orientation="horizontal"
+                    android:weightSum="10">
+
                     <TextView
-                        android:textSize="16dp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2.5"
                         android:fontFamily="@font/robotolight"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Dịch vu:"/>
+                        android:text="Dịch vụ:"
+                        android:textSize="16dp" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_lichsu_namedichvu"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="7.5"
                         android:text="COMBO CẮT UỐN NHUỘM CAO CẤP"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/black"
-                        android:id="@+id/tv_lichsu_namedichvu"/>
+                        android:textColor="@color/black" />
                 </LinearLayout>
-
             </LinearLayout>
-
         </LinearLayout>
-        <TextView
-            android:id="@+id/btn_lichsu_xemchitiet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/txtxemchitiet"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_horizontal"
-            android:textSize="16dp"
-            />
-<!--        <Button-->
-
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:backgroundTint="#FFC107"-->
-<!--            android:textSize="20dp"-->
-<!--            android:textStyle="bold"-->
-<!--            android:text="XEM CHI TIẾT"/>-->
-    </LinearLayout>
-
     </androidx.cardview.widget.CardView>
+
+</LinearLayout>
