--- a/app/src/main/res/drawable/custom_border_item.xml
+++ b/app/src/main/res/drawable/custom_border_item.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <solid android:color="#FFFFFF"/>
     <stroke
-        android:width="1dp"
+        android:width=".3dp"
         android:color="#D1D1D1"/>
     <corners
         android:bottomLeftRadius="7dp"
