--- a/app/src/main/res/layout/activity_chon_dich_vu.xml
+++ b/app/src/main/res/layout/activity_chon_dich_vu.xml
@@ -20,10 +20,10 @@
             android:src="@drawable/ic_vt_back_24" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="85dp"
+            android:gravity="center"
+            android:layout_marginEnd="40dp"
             android:fontFamily="@font/robotomedium"
             android:text="Chọn dịch vụ"
             android:textColor="@color/black"
@@ -58,6 +58,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="9.2"
+            android:layout_marginHorizontal="12dp"
+            android:gravity="center"
             android:numColumns="2"
             android:verticalSpacing="10dp" />
         <androidx.appcompat.widget.AppCompatButton
