--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,7 +45,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="NAM PHƯƠNG BÙI"
+                android:text=""
                 android:textColor="#FFFFFF"
                 android:id="@+id/home_tv_name_user"/>
 <!--            <TextView-->
