--- a/app/src/main/res/layout/custom_item_menu.xml
+++ b/app/src/main/res/layout/custom_item_menu.xml
@@ -17,9 +17,11 @@
     </LinearLayout>
     <TextView
         android:id="@+id/tv_content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Đặt lịch"
+        android:layout_marginHorizontal="5dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:fontFamily="@font/bevietnampro_regular"
         android:layout_marginTop="5dp"/>
