--- a/app/src/main/res/layout/item_trai_nhiem.xml
+++ b/app/src/main/res/layout/item_trai_nhiem.xml
@@ -1,59 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:divider="@null"
-    android:dividerHeight="5dp"
-    >
+   >
+
     <LinearLayout
-        android:divider="@null"
-        android:layout_margin="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:divider="@null"
+        android:weightSum="10"
+        android:orientation="horizontal">
+
         <androidx.cardview.widget.CardView
 
-            android:layout_gravity="left"
-            android:layout_width="78dp"
+            android:layout_width="0dp"
             android:layout_height="70dp"
-            app:cardCornerRadius="15dp"
+            android:layout_gravity="left"
             android:divider="@null"
             android:dividerHeight="0dp"
-            >
+            app:cardCornerRadius="5dp"
+            android:layout_weight="2"
+            app:cardUseCompatPadding="true">
+
             <ImageView
 
-                android:src="@mipmap/ic_launcher_round"
                 android:id="@+id/img_trai_nhiem"
-                android:layout_width="78dp"
+                android:layout_width="70dp"
                 android:layout_height="70dp"
-                />
+                android:src="@mipmap/ic_launcher_round" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:layout_marginLeft="10dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_marginLeft="10dp"
+            android:layout_weight="7.3"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/title_trai_nhiem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="cắt gội Massage"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:textColor="#352E2E"
-                />
+                android:fontFamily="@font/bevietnampro_regular"
+                android:text="Cắt gội Massage"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/price_trai_nhiem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="bảng giá"
                 android:layout_marginTop="5dp"
-                />
+                android:text="bảng giá" />
         </LinearLayout>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_vt_back"
+            android:rotation="180"/>
     </LinearLayout>
 </LinearLayout>
