--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,9 +9,10 @@
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="8"
-        android:background="#505050"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_gradient"
+        android:paddingTop="28dp"
+        android:paddingBottom="100dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -69,23 +70,22 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/scrollview_home"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:fillViewport="true">
-
-        <androidx.cardview.widget.CardView
+        android:layout_marginTop="-50dp"
+        android:background="@drawable/custom_corner_home">
+        <ScrollView
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="3500dp"
-            app:cardBackgroundColor="#FFF"
-            app:cardElevation="0dp">
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@drawable/custom_corner_home"
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#F5F6F8"
                 android:orientation="vertical">
 
                 <GridView
@@ -93,7 +93,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginHorizontal="12dp"
-                    android:layout_marginTop="20dp"
                     android:gravity="center"
                     android:numColumns="3"
                     android:verticalSpacing="20dp" />
@@ -105,16 +104,17 @@
 
                     <androidx.viewpager.widget.ViewPager
                         android:id="@+id/viewPager"
-                        android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
+                        android:layout_height="130dp"
                         android:layout_marginHorizontal="24dp"
-                        android:layout_height="130dp" />
+                        android:layout_marginTop="10dp" />
+
                     <me.relex.circleindicator.CircleIndicator
+                        android:id="@+id/circleIndicator"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:id="@+id/circleIndicator"
-                        android:layout_marginTop="-35dp"
-                        android:layout_gravity="center"/>
+                        android:layout_gravity="center"
+                        android:layout_marginTop="-35dp" />
                 </LinearLayout>
 
                 <TextView
@@ -169,17 +169,18 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardUseCompatPadding="true"
+                        app:cardCornerRadius="10dp"
                         app:cardElevation="1dp"
-                        app:cardCornerRadius="10dp">
-                    <GridView
-                        android:id="@+id/grv_camket"
-                        android:layout_width="match_parent"
-                        android:numColumns="2"
-                        android:layout_marginTop="20dp"
-                        android:verticalSpacing="20dp"
-                        android:gravity="center"
-                        android:layout_height="170dp"/>
+                        app:cardUseCompatPadding="true">
+
+                        <GridView
+                            android:id="@+id/grv_camket"
+                            android:layout_width="match_parent"
+                            android:layout_height="170dp"
+                            android:layout_marginTop="20dp"
+                            android:gravity="center"
+                            android:numColumns="2"
+                            android:verticalSpacing="20dp" />
 
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
@@ -195,8 +196,9 @@
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
-    </ScrollView>
+
+        </ScrollView>
+    </LinearLayout>
 
 
 </LinearLayout>
