--- a/app/src/main/res/layout/activity_accout.xml
+++ b/app/src/main/res/layout/activity_accout.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="12dp"
+            android:id="@+id/btn_back_user"
             android:layout_marginTop="8dp"
             android:src="@drawable/ic_vt_back_24" />
 
