--- a/app/src/main/res/layout/activity_chinhsachbaomat.xml
+++ b/app/src/main/res/layout/activity_chinhsachbaomat.xml
@@ -14,7 +14,7 @@
         android:paddingVertical="10dp">
 
         <ImageView
-            android:id="@+id/img_back_detail"
+            android:id="@+id/img_back_private"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
