--- a/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
+++ b/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
@@ -14,8 +14,15 @@
         <LinearLayout
             android:background="#ffff"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/btnhomeThongTinHoTroKhachHang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="40dp"
+                android:layout_marginLeft="12dp"
+                android:src="@drawable/ic_vt_back_24" />
             <androidx.cardview.widget.CardView
                 android:layout_gravity="center"
                 android:layout_width="70dp"
@@ -33,37 +40,38 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/thuy"
+                        android:layout_marginLeft="9dp"
                         android:id="@+id/home_img_avt_user" />
                 </androidx.cardview.widget.CardView>
             </androidx.cardview.widget.CardView>
             <TextView
-                android:layout_marginLeft="10dp"
-                android:textSize="16dp"
+                android:layout_marginLeft="17dp"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/txtname"
                 android:layout_gravity="center_vertical"
-                android:textColor="#FFCC33"
-                android:textStyle="bold"
-                android:fontFamily="@font/roboto"
+                android:textColor="@color/black"
+                android:textAllCaps="true"
+                android:fontFamily="@font/robotocondensed_bold"
                 android:id="@+id/home_tv_name_user"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="74dp"
+            android:layout_height="60dp"
             android:background="#EEEEEE"
             >
             <TextView
 
                 android:gravity="center_horizontal"
                 android:layout_gravity="center_vertical"
+                android:layout_marginHorizontal="12dp"
                 android:textColor="#000000"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:fontFamily="@font/robotomedium"
+                android:textSize="16sp"
+                android:fontFamily="@font/bevietnampro_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Thông Tin Hỗ Trợ Khách Hàng "
+                android:text="Thông tin hỗ trợ khách hàng "
                 />
         </LinearLayout>
 
