--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,10 +37,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:fontFamily="@font/robotomedium"
-
+                android:fontFamily="@font/robotocondensed_bold"
                 android:textColor="#FFFFFF"
-                android:textSize="22dp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -48,13 +47,18 @@
             android:layout_height="match_parent"
             android:gravity="right|center_vertical"
             android:orientation="horizontal">
-
+            <ImageView
+                android:id="@+id/home_img_btn_discorver"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_vt_awesome_32" />
             <ImageView
                 android:id="@+id/home_img_btn_newfeed"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginRight="20dp"
-                android:src="@drawable/notifications" />
+                android:src="@drawable/ic_vt_notifications_32" />
         </LinearLayout>
     </LinearLayout>
 
