--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -12,7 +12,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:background="#ffff"
             android:orientation="horizontal">
 
@@ -20,8 +20,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
-
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="40dp"
                 android:id="@+id/user_img_avt_user"
                 />
 
@@ -30,15 +29,14 @@
             <TextView
                 android:id="@+id/user_tv_name_user"
                 android:layout_width="wrap_content"
-                android:layout_height="22dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="13dp"
-                android:fontFamily="@font/roboto"
+                android:layout_marginLeft="17dp"
+                android:fontFamily="@font/robotocondensed_bold"
                 android:gravity="center_vertical"
-
-                android:textColor="#FFCC33"
-                android:textSize="18dp"
-                android:textStyle="bold" />
+                android:textColor="@color/black"
+                android:textAllCaps="true"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <ImageView
