--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -167,7 +167,7 @@
                         app:cardElevation="1dp"
                         app:cardUseCompatPadding="true">
 
-                        <ListView
+                        <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/home_rcv_hotstylish"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
