--- a/app/src/main/res/layout/item_hotstylish.xml
+++ b/app/src/main/res/layout/item_hotstylish.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:divider="@null"
