--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,6 +58,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginRight="20dp"
+                android:visibility="gone"
                 android:src="@drawable/ic_vt_notifications_32" />
         </LinearLayout>
     </LinearLayout>
